fixed scrollbar

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,7 @@
     }
 }
 
-.content-area {
+.content {
     &::-webkit-scrollbar {
         width: 8px;
         background-color: #181818;
